--- a/index.css
+++ b/index.css
@@ -1,36 +1,83 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: #ECEEF1;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #0077C5;
+}
+
+.fade {
+  color: #444;
+}
+/* == header styles == */
+header {
+  border: 1px solid black;
+  padding: 0.4em;
+}
+
+nav {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+header nav .description {
+  display: inline-block;
+  font-size: 0.75em;
+  vertical-align: middle;
+  padding: 0.1em;
+}
+
+header nav button {
+  background-color: #0077C5;
+  display: inline-block;
+  border: 1px solid #222;
+  margin-right: 3em;
+  font-size: 14px;
+  color: #fff;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+nav .icons {
+  color: #f9f9f9;
+  vertical-align: text-top;
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+      display: none;
   }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  header {
-    background-color: blue;
-  }
-  
-  main {
-    background-color: yellow;
-    display: flex;
-  }
-  
-  main .col-1, main .col-3 {
-    flex-basis: 35%;
-  }
-  
-  main .col-2 {
-    flex-basis: 30%;
-    border: 1px solid red;
-  }
-  
-  footer {
-      background-color: green;
-  }
-  
-  footer p {
-    margin: 0;
-    padding: 0;
-  }
+}
+
+/* == Main == */
+main {
+  display: flex;
+}
+
+main .col-1, main .col-3 {
+  flex-basis: 35%;
+}
+
+main .col-2 {
+  flex-basis: 30%;
+  border: 1px solid red;
+}
+
+footer {
+  background-color: green;
+}
+
+footer p {
+  margin: 0;
+  padding: 0;
+}
