--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ main .col-1, main .col-3 {
   flex-basis: 35%;
 }
 
-main .col-2 {
+main .container {
   flex-basis: 30%;
   border: 1px solid red;
 }
@@ -80,4 +80,15 @@ footer {
 footer p {
   margin: 0;
   padding: 0;
+}
+
+.paragraph span {
+  display: block;
+  padding: 0.1em;
+}
+
+.paragraph {
+  font-style: italic;
+  font-size: 0.75em;
+  color: #444;
 }
