--- a/index.css
+++ b/index.css
@@ -6,18 +6,10 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  background-color: #ECEEF1;
+  background-color: #eceef1;
   font-family: Helvetica, Arial, sans-serif;
 }
 
-a {
-  text-decoration: none;
-  color: #0077C5;
-}
-
-.fade {
-  color: #444;
-}
 /* == header styles == */
 header {
   border: 1px solid black;
@@ -37,7 +29,7 @@ header nav .description {
 }
 
 header nav button {
-  background-color: #0077C5;
+  background-color: #0077c5;
   display: inline-block;
   border: 1px solid #222;
   margin-right: 3em;
@@ -55,16 +47,17 @@ nav .icons {
 
 @media only screen and (max-width: 768px) {
   nav {
-      display: none;
+    display: none;
   }
 }
 
-/* == Main == */
+/* == Main Layout == */
 main {
   display: flex;
 }
 
-main .col-1, main .col-3 {
+main .col-1,
+main .col-3 {
   flex-basis: 35%;
 }
 
@@ -73,6 +66,7 @@ main .container {
   border: 1px solid red;
 }
 
+/* == Footer == */
 footer {
   background-color: green;
 }
@@ -87,8 +81,18 @@ footer p {
   padding: 0.1em;
 }
 
+/* == Misc. == */
+.fade {
+  color: #444;
+}
+
 .paragraph {
   font-style: italic;
   font-size: 0.75em;
   color: #444;
+}
+
+a {
+  text-decoration: none;
+  color: #0077c5;
 }
