Add style to form-container header and form btn
- Change font-weight for form-container header
- Change color for form-container
- style form submit button

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   text-align: center;
   background-color: #ECEEF1;
   font-family: Helvetica, Arial, sans-serif;
+  font-size: 0.9em;
 }
 
 /* == header styles == */
@@ -75,7 +76,19 @@ footer p {
   padding: 0;
 }
 
+/* == Container == */
+
+
 /* == Form Container == */
+
+.form-container-header {
+  color: #333;
+}
+
+.form-container h2 {
+  font-weight:normal;
+}
+
 .form-container {
   background-color: #fff;
   padding: 1em 1.5em;
@@ -83,7 +96,6 @@ footer p {
 
 .form-control {
   margin: 1.5em 0;
-  font-size: 15px;
 }
 
 .form-control label {
@@ -99,6 +111,22 @@ footer p {
   font-size: 1.2em;
   border-radius: 4px;
   outline: none;
+}
+
+.form-control button {
+    background-color: #0077C5;
+    display: block;
+    width: 100%;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 1.2em;
+    padding: 0.5em 0;
+    text-align: center;
+}
+
+.form-control button:hover {
+    background-color: #0044AB;
 }
 
 .form-container .paragraph span {
