--- a/index.css
+++ b/index.css
@@ -220,3 +220,18 @@ a {
   text-decoration: none;
   color: #0077C5;
 }
+
+.privacy-settings-btn {
+  position: fixed;
+  bottom: 0;
+  right: 5%;
+  background-color: #777;
+  color: #fff;
+  width: 9rem;
+  padding: 1em 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+  cursor: pointer;
+}
