--- a/index.css
+++ b/index.css
@@ -123,24 +123,30 @@ footer p {
 }
 
 .form-control button {
-    background-color: #0077C5;
-    display: block;
-    width: 100%;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    font-size: 1.2em;
-    padding: 0.5em 0;
-    text-align: center;
+  background-color: #0077C5;
+  display: block;
+  width: 100%;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.2em;
+  padding: 0.5em 0;
+  text-align: center;
 }
 
 .form-control button:hover {
-    background-color: #0044AB;
+  background-color: #0044AB;
 }
 
 .form-container .paragraph span {
   display: block;
   padding: 0.1em;
+}
+
+.form-control .input-info-text {
+  font-size: 0.7em;
+  text-align: left;
+  padding: 0.3em 0;
 }
 
 /* == Menu sprite == */
