--- a/index.css
+++ b/index.css
@@ -17,32 +17,29 @@ header {
 }
 
 nav {
-  display: flex;
   flex-direction: row-reverse;
 }
 
 header nav .description {
   display: inline-block;
-  font-size: 0.75em;
+  font-size: 0.9em;
   vertical-align: middle;
   padding: 0.1em;
 }
 
 header nav button {
   background-color: #0077c5;
-  display: inline-block;
   border: 1px solid #222;
   margin-right: 3em;
   font-size: 14px;
-  color: #fff;
   padding: 8px 16px;
   cursor: pointer;
   border-radius: 4px;
 }
 
-nav .icons {
-  color: #f9f9f9;
+nav i.icons {
   vertical-align: text-top;
+  font-size: 14px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -52,10 +49,6 @@ nav .icons {
 }
 
 /* == Main Layout == */
-main {
-  display: flex;
-}
-
 main .col-1,
 main .col-3 {
   flex-basis: 35%;
@@ -128,14 +121,10 @@ footer p {
 
 .form-control button {
   background-color: #0077c5;
-  display: block;
-  width: 100%;
-  color: #fff;
   border: none;
   border-radius: 4px;
   font-size: 1.2em;
   padding: 0.5em 0;
-  text-align: center;
 }
 
 .form-control button:hover {
@@ -216,14 +205,13 @@ ul.menu-sprite li {
 }
 
 /* == Misc. == */
-.fade {
-  color: #444;
+.flex {
+  display: flex;
 }
 
 .paragraph {
   font-style: italic;
   font-size: 0.75em;
-  color: #444;
 }
 
 a {
@@ -231,17 +219,26 @@ a {
   color: #0077c5;
 }
 
+.cursor {
+  cursor: pointer;
+}
+
 .privacy-settings-btn {
   position: fixed;
   bottom: 0;
+  color: #fff;
   right: 5%;
   background-color: #777;
-  color: #fff;
   width: 9rem;
   padding: 1em 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 2px;
   border-top-left-radius: 2px;
-  cursor: pointer;
+}
+
+button {
+  width: 100%;
+  color: #fff;
+  display: block;
 }
