--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ header nav .description {
   display: inline-block;
   font-size: 0.9em;
   vertical-align: middle;
-  padding: 0.1em;
+  padding: 0.1em 1em;
 }
 
 header nav button {
